Fix buttons overlapping next section on tablet view

--- a/client/src/components/Service/Service.scss
+++ b/client/src/components/Service/Service.scss
@@ -1,5 +1,4 @@
 .service {
-  height: 70vh;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -74,7 +73,6 @@
 
 @media only screen and (min-width: 760px) {
   .service {
-    height: 420px;
     width: 18%;
   }
   .service-icon {
